; ModuleID = '/home/carl/AnghaBench/postgres/contrib/postgres_fdw/extr_deparse.c_deparseDirectDeleteSql.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/postgres_fdw/extr_deparse.c_deparseDirectDeleteSql.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i64 }
%struct.TYPE_7__ = type { i32**, i32, %struct.TYPE_8__*, %struct.TYPE_8__*, i32* }

@.str = private unnamed_addr constant [13 x i8] c"DELETE FROM \00", align 1
@RELOPT_JOINREL = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [6 x i8] c" %s%d\00", align 1
@REL_ALIAS_PREFIX = common dso_local global i32 0, align 4
@NIL = common dso_local global i32* null, align 8
@.str.2 = private unnamed_addr constant [8 x i8] c" USING \00", align 1
@.str.3 = private unnamed_addr constant [8 x i8] c" WHERE \00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @deparseDirectDeleteSql(i32 %0, i32* %1, i32 %2, i32 %3, %struct.TYPE_8__* %4, i32* %5, i32** %6, i32* %7, i32** %8) #0 {
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_8__*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32**, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i32**, align 8
  %19 = alloca %struct.TYPE_7__, align 8
  %20 = alloca i32*, align 8
  store i32 %0, i32* %10, align 4
  store i32* %1, i32** %11, align 8
  store i32 %2, i32* %12, align 4
  store i32 %3, i32* %13, align 4
  store %struct.TYPE_8__* %4, %struct.TYPE_8__** %14, align 8
  store i32* %5, i32** %15, align 8
  store i32** %6, i32*** %16, align 8
  store i32* %7, i32** %17, align 8
  store i32** %8, i32*** %18, align 8
  %21 = load i32*, i32** %11, align 8
  %22 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %19, i32 0, i32 4
  store i32* %21, i32** %22, align 8
  %23 = load %struct.TYPE_8__*, %struct.TYPE_8__** %14, align 8
  %24 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %19, i32 0, i32 3
  store %struct.TYPE_8__* %23, %struct.TYPE_8__** %24, align 8
  %25 = load %struct.TYPE_8__*, %struct.TYPE_8__** %14, align 8
  %26 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %19, i32 0, i32 2
  store %struct.TYPE_8__* %25, %struct.TYPE_8__** %26, align 8
  %27 = load i32, i32* %10, align 4
  %28 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %19, i32 0, i32 1
  store i32 %27, i32* %28, align 8
  %29 = load i32**, i32*** %16, align 8
  %30 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %19, i32 0, i32 0
  store i32** %29, i32*** %30, align 8
  %31 = load i32, i32* %10, align 4
  %32 = call i32 @appendStringInfoString(i32 %31, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %33 = load i32, i32* %10, align 4
  %34 = load i32, i32* %13, align 4
  %35 = call i32 @deparseRelation(i32 %33, i32 %34)
  %36 = load %struct.TYPE_8__*, %struct.TYPE_8__** %14, align 8
  %37 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %36, i32 0, i32 0
  %38 = load i64, i64* %37, align 8
  %39 = load i64, i64* @RELOPT_JOINREL, align 8
  %40 = icmp eq i64 %38, %39
  br i1 %40, label %41, label %46

41:                                               ; preds = %9
  %42 = load i32, i32* %10, align 4
  %43 = load i32, i32* @REL_ALIAS_PREFIX, align 4
  %44 = load i32, i32* %12, align 4
  %45 = call i32 @appendStringInfo(i32 %42, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32 %43, i32 %44)
  br label %46

46:                                               ; preds = %41, %9
  %47 = load %struct.TYPE_8__*, %struct.TYPE_8__** %14, align 8
  %48 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %47, i32 0, i32 0
  %49 = load i64, i64* %48, align 8
  %50 = load i64, i64* @RELOPT_JOINREL, align 8
  %51 = icmp eq i64 %49, %50
  br i1 %51, label %52, label %65

52:                                               ; preds = %46
  %53 = load i32*, i32** @NIL, align 8
  store i32* %53, i32** %20, align 8
  %54 = load i32, i32* %10, align 4
  %55 = call i32 @appendStringInfoString(i32 %54, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0))
  %56 = load i32, i32* %10, align 4
  %57 = load i32*, i32** %11, align 8
  %58 = load %struct.TYPE_8__*, %struct.TYPE_8__** %14, align 8
  %59 = load i32, i32* %12, align 4
  %60 = load i32**, i32*** %16, align 8
  %61 = call i32 @deparseFromExprForRel(i32 %56, i32* %57, %struct.TYPE_8__* %58, i32 1, i32 %59, i32** %20, i32** %60)
  %62 = load i32*, i32** %15, align 8
  %63 = load i32*, i32** %20, align 8
  %64 = call i32* @list_concat(i32* %62, i32* %63)
  store i32* %64, i32** %15, align 8
  br label %65

65:                                               ; preds = %52, %46
  %66 = load i32*, i32** %15, align 8
  %67 = icmp ne i32* %66, null
  br i1 %67, label %68, label %73

68:                                               ; preds = %65
  %69 = load i32, i32* %10, align 4
  %70 = call i32 @appendStringInfoString(i32 %69, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0))
  %71 = load i32*, i32** %15, align 8
  %72 = call i32 @appendConditions(i32* %71, %struct.TYPE_7__* %19)
  br label %73

73:                                               ; preds = %68, %65
  %74 = load %struct.TYPE_8__*, %struct.TYPE_8__** %14, align 8
  %75 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %74, i32 0, i32 0
  %76 = load i64, i64* %75, align 8
  %77 = load i64, i64* @RELOPT_JOINREL, align 8
  %78 = icmp eq i64 %76, %77
  br i1 %78, label %79, label %83

79:                                               ; preds = %73
  %80 = load i32*, i32** %17, align 8
  %81 = load i32**, i32*** %18, align 8
  %82 = call i32 @deparseExplicitTargetList(i32* %80, i32 1, i32** %81, %struct.TYPE_7__* %19)
  br label %94

83:                                               ; preds = %73
  %84 = load i32, i32* %10, align 4
  %85 = load i32, i32* %12, align 4
  %86 = load i32*, i32** %11, align 8
  %87 = call i32 @planner_rt_fetch(i32 %85, i32* %86)
  %88 = load i32, i32* %12, align 4
  %89 = load i32, i32* %13, align 4
  %90 = load i32*, i32** @NIL, align 8
  %91 = load i32*, i32** %17, align 8
  %92 = load i32**, i32*** %18, align 8
  %93 = call i32 @deparseReturningList(i32 %84, i32 %87, i32 %88, i32 %89, i32 0, i32* %90, i32* %91, i32** %92)
  br label %94

94:                                               ; preds = %83, %79
  ret void
}

declare dso_local i32 @appendStringInfoString(i32, i8*) #1

declare dso_local i32 @deparseRelation(i32, i32) #1

declare dso_local i32 @appendStringInfo(i32, i8*, i32, i32) #1

declare dso_local i32 @deparseFromExprForRel(i32, i32*, %struct.TYPE_8__*, i32, i32, i32**, i32**) #1

declare dso_local i32* @list_concat(i32*, i32*) #1

declare dso_local i32 @appendConditions(i32*, %struct.TYPE_7__*) #1

declare dso_local i32 @deparseExplicitTargetList(i32*, i32, i32**, %struct.TYPE_7__*) #1

declare dso_local i32 @deparseReturningList(i32, i32, i32, i32, i32, i32*, i32*, i32**) #1

declare dso_local i32 @planner_rt_fetch(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
